css/module.css
/* page backgrounds */

.home_body {
  background-image: url("http://i.imgur.com/O3FO1fo.jpg");
  background-position: absolute;
  height: 100vh;
  width: 100vh;
  background-size: cover;
  }

.about_body {
  background-image: url("http://i.imgur.com/WmIfuTG.jpg");
  background-position: absolute;
  height: 100vh;
  width: 100vh;
  background-size: cover;
  background-repeat: no-repeat;
  }

.photos_body {
  background-image: url("http://i.imgur.com/bpLuf4u.jpg");
  background-position: absolute;
  height: 100vh;
  width: 100vh;
  background-size: cover;
  background-repeat: no-repeat;
  }

.contact_body {
  background-image: url("http://i.imgur.com/embYujj.jpg");
  background-position: absolute;
  height: 100vh;
  width: 100vh;
  background-size: cover;
  background-repeat: no-repeat;
}

/* page headers*/
.main_header {
  overflow: hidden;
  position: fixed;
  background: black;
  margin: 0em 8px 0px 0em;
  width: 100%;
  background: rgba(0,0,0,0.5);
}

.about_header {
  overflow: hidden;
  position: fixed;
  margin: -10em 8px 0px 0em;
  width: 100%;
  background: rgba(0,0,0,0.5);
}


.logo {
  float: left;
  color: white;
  padding: 15px 40px;
}

.main_header_nav_ul_li {
  display: inline-block;
  font: Oswald;
  font-size: 18px;
  text-transform: uppercase;
  padding: .25em;
  float: right;
  color: white;
}

.main_header_nav_ul_li a {
  text-decoration: none;
  color: inherit;
}

.main_header_nav {
position: fixed;
margin: 25px 0px 0px 20em;

}


/* paragraph styling*/

p {
  margin: 10em auto auto 20em;
  background: rgba(0,0,0,0.5);
  color: white;
  padding: 2em 2em;
  width: 75%;
}

/* page footers */

.main_footer_ul_li {
  display: inline-block;
  font: Oswald white 15px;
  color: white;
}

.footer {
  position: fixed;
  bottom: 0;
  background: black;
  width: 100%;
  padding: 10px 40px;
}

